fix(backbone.scss): fix margin on mobile screens

--- a/src/app/modules/backbone/pages/backbone/backbone.page.scss
+++ b/src/app/modules/backbone/pages/backbone/backbone.page.scss
@@ -13,5 +13,7 @@
 }
 
 .page-container {
-    @apply md:col-span-9;
+    @apply mt-14;
+
+    @apply md:mt-0 md:col-span-9;
 }
